<resources>
    <string name="app_name">MCom</string>

    <string name="action_search">Search</string>
    <string name="action_cart">Shopping Cart</string>
    <string name="action_settings">Settings</string>
    
    <string name="app_label">MCom</string>
    <string name="search_hint">Search Products</string>
    
    
    <string name="product_category_list">Product Category</string>
    <string name="product_list">Product</string>
    
    <string-array name="mainCategoryList">
        <item>Fruits &amp; Vegetables</item>
        <item>Pure Edible Oil</item>
        <item>Dry Fruits</item>
    </string-array>
    
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_signing_in_progress">Signing in&#8230;</string>z
    <string name="error_field_required">This field is required</string>
    
    <string name="action_save">Save</string>
    
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Orders</item>
        <item>Profile</item>
        <item>Addresses</item>
        <item>Change Password</item>
        <item>Preference</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
</resources>
